# waven-working-

./: .gitignore  .readthedocs.yaml  README.md  environement.yml  environment.yml  example.py  pyproject.toml  requirements.txt
docs/: requirements.txt  search.js  src.html
docs/doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/source/: conf.py
docs/src/: zebrAnalysis3.html
docs/src/zebrAnalysis3/: Analysis_Utils.html
docs/src/zebrAnalysis3/suite2p/: utils.html
pydocs/: Waven.html  index.html  search.js
pydocs/Waven/: Analysis_Utils.html  LoadPinkNoise.html  WaveletGenerator.html  suite2p.html  zebraGUI.html
pydocs/Waven/suite2p/: utils.html
pydocs/Waven/suite2p/utils/: cortex_lab_utils.html  mpeppy.html  timelinepy.html  twophopy.html  utils.html
pydocs/src/Waven/: LoadPinkNoise.html  WaveletGenerator.html  suite2p.html  zebraGUI.html
pydocs/src/Waven/suite2p/utils/: cortex_lab_utils.html  mpeppy.html  timelinepy.html  twophopy.html  utils.html
source/: conf.py
src/: Zebra_Analysis.ipynb  Zebra_Analysis_Sonic.ipynb  run_zebra_analysis.py  zebra-analysis.ipynb
src/Waven/: Analysis_Utils.py  LoadPinkNoise.py  WaveletGenerator.py
src/waven0.1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/zebrAnalysis3/: LoadPinkNoise.py
src/zebrAnalysis3/suite2p/utils/: utils.py
src/zebrAnalysis9.55.egg-info/: PKG-INFO  SOURCES.txt
